<resources>
    <string name="app_name">Skylar</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="motto">Welcome, let\'s start learning and earning</string>
    <string name="the_name">Name</string>
    <string name="the_email">Email</string>
    <string name="the_password">Password</string>
    <string name="the_number">Phone number</string>
    <string name="agreement">I agree to the terms and conditions</string>
    <string name="remember">Remember me</string>
    <string name="welcome">Welcome!</string>
    <string name="start">Start</string>
    <string name="oldUser">Already have an account? Login</string>
    <string name="newUser">Don\'t have an account? Register</string>
    <string name="menu_hello">Hello</string>
    <string name="arinze"> </string>
    <string name="search_elements">Search elements</string>
    <string name="trending">Trending</string>
    <string name="trend_text">Check out the latest job and global opportunities for university students</string>
    <string name="home">home</string>
    <string name="community">community</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="student">Student</string>
    <string name="arinze_obumselu">Arinze Obumselu</string>
    <string name="arinzeobumselu_gmail_com">Arinzeobumselu@gmail.com</string>
    <string name="view_wallet">View Wallet</string>
    <string name="account_1">Account 1</string>
    <string name="apply_now">Apply Now</string>

    <string-array name="bread_choice">
        <item>XLM</item>
        <item>XLM</item>
    </string-array>
</resources>