<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".SignUpActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="#16161D"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/motto"
        android:textColor="#16161D"
        android:textSize="14sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:id="@+id/setEmail"
        android:textColor="#16161D"
        android:background="@drawable/textbox"
        android:inputType="textEmailAddress"
        android:hint="@string/the_email"
        />
</com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setPasswordLayout"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setPassword"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/textbox"
            android:hint="@string/the_password"
            android:inputType="textPassword"
            android:textColor="#16161D"
            tools:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>



    <CheckBox
        android:id="@+id/ck_remember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/remember" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login"
        app:backgroundTint="#087DC0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_user"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:linksClickable="true"
        android:autoLink="all"
        android:text="@string/newUser"
        android:textColor="#16161D"
        android:textSize="14dp" />



</LinearLayout>